static/themes/default/style.css
/* ... */
.countryflag
{
    margin:-2px 2px 1px 1px; 
    vertical-align:middle; 
}

.platform_icon
{
    vertical-align: middle;
    margin-left: 3px;
}

.text-link
{
    vertical-align: middle;
    margin-left: 1px;
    margin-right: 1px;
}

.icon_header
{
	padding: 1ex;
	padding-top: 4px;
	padding-bottom: 4px;
	vertical-align: middle;
	margin: 0;
	border: 0;
	background-image: url("glow.png");
	background-repeat: no-repeat;
	background-position: center center;
}

#main ul
{
	margin: 0;
	padding: 0;
	margin-left: 3em;
	list-style-type: disc;
	list-style-position: outside;
	display: block;
}

#main ul.imgbull li
{
	list-style-type: none;
	background-position: 0px 50%;
	background-repeat: no-repeat;
	min-height: 16px;
	margin-left: -3.5ex;
	padding-left: 3.5ex;
}

#copyleft, #copyright
{
	display: block;
	font-size: 7px;
	position: relative;
	bottom: -3ex;
	margin: 0;
}

#copyleft
{
	float: left;
}

#copyright
{
	float: right;
}

#copyleft a, #copyright a
{
	color: #210;
}

#validator
{
	position: absolute;
	right: 1px;
	top: 1px;
}

/* froumzz */

#djangoForumBreadcrumbs, .pages
{
    margin-bottom: 1em;
}

.pagesBottom
{
    margin-top: 1em;
	text-align: right;
}

#djangoForumList,
#djangoForumThreadList
{
	width: 99%;
	margin: auto;
	border-width: 1px;
	border-style: solid;
	border-color: #ccc;
	border-top-color: #fda; /* stupid ie */
	border-right-color: #444;
	border-bottom-color: #444;
	border-collapse: collapse;
	background-color: transparent;
	background-image: url("hilight.png");
	background-position: center;
}

#djangoForumList th,
#djangoForumThreadList th,
#djangoForumThreadPosts th
{
	padding: 0;
	padding-left: 8px;
	padding-right: 8px;
	border-width: 1px;
	border-style: solid;
	border-top-color: #fda;
	border-left-color: #fda;
	border-right-color: #961;
	border-bottom-color: #961;
	background-color: #e90;
	background-image: url("shine.png");
	background-position: center center;
	background-repeat: repeat-x;
    text-align: left;
	color: #210;
}

#djangoForumList td,
#djangoForumThreadList td
{
	padding: 0;
	border-width: 1px;
	border-style: solid;
	border-color: #ddd;
	border-top-color: #961; /* stupid ie */
	border-right-color: #aaa;
	border-bottom-color: #aaa;
}

.djangoForumListDetails,
.post
{
	background: #fff;
}

.djangoForumListDetails p
{
	margin: 0;
}

#djangoForumList .djangoForumListDetails .djangoForumStats
{
	position: relative !important;
	position: static; /* ha! lost stupid ie6 again! */
	z-index: 5;
	float: right;
	margin-top: -12pt;
	padding-right: 8px;
	font-size: 7px;
}

.forumName
{
	display: block;
	position: relative !important;
	position: static; /* ha! */
	z-index: 10;
	padding-left: 8px;
	padding-right: 8px;
	padding-bottom: 12pt;
	font-size: 10px;
}

.djangoForumListDetails .forumDescription
{
	display: block;
	position: relative !important;
	position: static; /* ha! */
	z-index: 5;
	margin-top: -12pt;
	padding: 0;
	padding-left: 8px;
	padding-right: 8px;
}

#djangoForumList .djangoForumListDetails
{
	width: 70%;
	padding: 0;
}

#djangoForumList td,
#djangoForumThreadList td
{
	padding-left: 8px;
	padding-right: 8px;
}

.djangoForumListDetails
{
	padding: 0;
}

#djangoForumThreadList td
{
	width: 5%;
	text-align: center;
}

#djangoForumThreadList .djangoForumThreadListName
{
	width: 60%;
	text-align: left;
	background: #fff;
}

#djangoForumList .djangoForumListLastPost,
#djangoForumThreadList .djangoForumThreadLastPost
{
	width: 30%;
	text-align: left;
}

#djangoForumThreadList .djangoForumThreadListName
{
	padding: 0;
	background: #fff;
}

.threadName
{
	display: block;
	line-height: 2em;
	padding-left: 8px;
	padding-right: 8px;
}

#djangoForumThreadPosts
{
	width: 99%;
	margin: auto;
	border: 0;
	border-collapse: collapse;
	background-color: transparent;
	background-image: url("hilight.png");
	background-position: center;
}

#djangoForumThreadPosts td
{
	padding-left: 8px;
	padding-right: 8px;
}


#djangoForumThreadPosts .djangoForumThreadPostDetail
{
	vertical-align: top;
	border-left: 1px solid #ddd;
	padding-top: 1em;
}

#djangoForumThreadPosts
{
}

#djangoForumThreadPosts .postfooter
{
	border-left: 1px solid #ddd;
	border-right: 1px solid #aaa;
	border-bottom: 1px solid #aaa;
	text-align: right;
}

#djangoForumThreadPosts .postfooter td:first-child
{
	text-align: left;
	font-size: 10px;
}


#djangoForumThreadPosts .post
{
	vertical-align: top;
	padding-top: 1em;
	border: 0;
	border-left: 1px solid #aaa;
	border-right: 1px solid #aaa;
	border-bottom: 1px solid #aaa;
	width: 85%;
}

.post p
{
	margin: 0;
	margin-bottom: 1em;
}


#newThread
{
	width: 99%;
	margin: auto;
}

#newThread .label
{
	text-align: right;
	vertical-align: top;
}

#newThread #postThread
{
	text-align: center;
}


#newThread #postThread
{
	text-align: center;
}

table.songlist {
	border-collapse: collapse;
	border-spacing: 0px;
}

table.songlist td {
	padding: 0px;
	padding-left: 5px;
	padding-right: 5px;
}

table.songlist th {
	padding: 3px;
}

table.songlist tr.row1 td {
/*	background-color: #FCfcfc;*/
	background-color: #fefef2;
}

table.songlist tr.row2 td {
/*	background-color: #e1e1e1; */
	background-color: #ffe4ba;

}

